# library-console-app

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: main-workflow.yml
app/: exceptions.py  main.py
app/application/api/books/: dependecies.py  handlers.py  schemas.py
app/domain/: exceptions.py
app/domain/entities/: base.py  books.py
app/domain/utils/: enums.py
app/domain/values/: base.py  books.py
app/infrastructure/: bootstrap.py  exceptions.py  message_bus.py
app/infrastructure/repositories/: base.py
app/infrastructure/repositories/books/: base.py  jsonr.py  memory.py
app/infrastructure/services/: books.py
app/infrastructure/uow/: base.py
app/infrastructure/uow/books/: base.py  jsonr.py
app/logic/: exceptions.py
app/logic/commands/: base.py  books.py
app/logic/events/: base.py
app/logic/handlers/: __init__.py  base.py
app/logic/handlers/books/: base.py  commands.py
app/settings/: config.py
app/settings/logger/: config.py  filters.py
resources/config/: logger-config.json
tests/unit_tests/domain/entities/: test_books.py
tests/unit_tests/domain/values/: test_books.py
